--- a/public/Changes.txt
+++ b/public/Changes.txt
@@ -1,4 +1,28 @@
-﻿2.1.0
+2.2.0
+
+Features
+
+-Made full screen dialog margins customizable.
+-Update Knockout to 3.4.0
+
+Bug Fixes
+
+-Fix Issue #542: SampleApp page-host overflow-y slow on Webkit
+-Fix Issue #541: Fail on logging activate promise
+-Fix Issue #545: navigation breaks after failing to load module
+-Fix Issue #547: Navbar collapse broken in starterkit
+-Fix Issue #552, #567: attach viewmodel lifecycle callback get improper query string, IE8
+-Fix Issue #563, #564, #565: Links to Bootstrap's site are outdated
+-Fix Issue #569, #575: composition.js issue in ie7
+-Fix Issue #574, #577, #578: Fixed some bugs in dialog.js and added customizability to full screen dialog margins
+-Fix Typo in durandal.d.ts
+-Fix Issue #605 Router deactivates current item when deactivated
+-Fix #625 Resolve the problem that empty URL parameters are rem
+-Fix #614 Add guard for importing empty views
+-Fix #622 Missing import in welcome view-model
+-Fix #654 Setter conflict with observable.defineProperty
+
+2.1.0
 -Fix Issue #381: Update Durandal to use KO 3
 -Fix Issue #374: Bootstrap 3.0 & Font-Awesome Update
 -Fix Issue #380: Replaced html bindings with text bindings in sample application codes
@@ -19,53 +43,53 @@
 -Fix Issue #409: Navigate method: Only set explicitNavigation to true when trigger is true
 -Fix Issue #286: Adding the ability to use a .hasChildRoutes boolean route property rather than *details
 -Fix Issue #312: Improved query string to handle multiple occurences of the same key
--Fix Issue #315: Append startRoute option to router activate options 
--Fix Issue #343: Support for observable route titles 
--Fix Issue #355: Fix bug where IE will fail to load view due to wrong typeName 
+-Fix Issue #315: Append startRoute option to router activate options
+-Fix Issue #343: Support for observable route titles
+-Fix Issue #355: Fix bug where IE will fail to load view due to wrong typeName
 -Fix Issue #360: Added a toJSON function to the http module to allow customizing how objects are converted
 -Fix Issue #405: Added Layout = null to index view for vs template and nuget starter kit
 -Fix Issue #368: Added headers to http.js plugin
 -Fix Issue #412/#413: Route configured as RegExp object throwing error
--Fix Issue #426: Fix bug where guardRoute cannot redirect to '' 
+-Fix Issue #426: Fix bug where guardRoute cannot redirect to ''
 -Fix Issue #480: DurandalRouteConfiguration.nav to be optional in Typescript definition
--Fix Issue #449: dialog's config.messageBoxView working improperly 
--Fix Issue #445: Improve 'Route Not Found' message 
+-Fix Issue #449: dialog's config.messageBoxView working improperly
+-Fix Issue #445: Improve 'Route Not Found' message
 -Fix Issue #362: Dialog improvements
--Fix Issue #452: Provide original error to system.error 
+-Fix Issue #452: Provide original error to system.error
 -Fix Issue #459: Fixed bug in router where querystring in child routes causes Route Not Found errors
 -Fix Issue #464: Fix a bug that causes routes to be relative even when in pushState
 -Fix Issue #473 and 476: Querystring function should only split on first '='
 -Fix Issue #482: Support full HTML templates
 -Fix Issue #486: Allow `app.title` to be an observable.
--Fix Issue #483: Renaming "module" variable 
+-Fix Issue #483: Renaming "module" variable
 -Fix Issue #300: closeDialog convenience API
 -Fix Issue #361: TS File has incorrect sig for observable.defineProperty by making the actual implementation more flexible
 -Fix Issue #436, #453 and #371: Composition complete callbacks not trigged
 -Fix Issue #481: Dialog improvement (adding binding callback to custom contexts)
 -Fix Issue #346 and #438: various composition part pass through issues
 -Fix Issue #475 and #432: Abort composition when the context is changed during activation
--Fix Issue #488/#421: TypeScript - expose durandal/system and durandal/viewEngine in module 
+-Fix Issue #488/#421: TypeScript - expose durandal/system and durandal/viewEngine in module
 -Fix Issue #490: Add optional change detection via the observable module. See docs for details.
 -Fix Issue #494: Feature: serializer.clone
 -Fix Issue #495: Maybe add a router navigation started event (added router:navigation:processing)
 -Fix Issue #498 and #496: Overwriting an observable array results in one-way binding of the new array
 -Fix Issue #489: Observable plugin resetting Deferred properties as undefined
 -Fix Issue #366: Make Observable Tracking Non-Enumerable
--Fix Issue #501: Entrance transition bug in Chrome 34 
+-Fix Issue #501: Entrance transition bug in Chrome 34
 -Fix Issue #503: Updated showMessage overload
--Fix Issue #395: setRoot() composition skips canActivate 
+-Fix Issue #395: setRoot() composition skips canActivate
 -Fix Issues #418, #181, #297: Various fixes to activator hierarchies and child routers
--Fix Issue #461: Router: Click binding not stripping root path 
--Fix Issue #508: Composition on error override 
--Fix Issue #511: Always end composition, even on error 
--Fix Issue #509: Unable to set activator settings "closeOnDeactivate" property to false 
--Fix Issue #512: Multi-item activator issue 
--Fix Issue #356: Don't throw exception in deferred fail in canActivate 
--Fix Issue #417: Added support for null routes. 
--Fix Issue #500: Observable.js - Custom shouldIgnorePropertyName 
--Fix Issue #505: Make observable plug-in convert existing properties 
--Fix Issue #262: binding different views to the same view-model (enable default behavior of router) 
--Fix Issue #430: Sometimes, negative response from CanDeactivate doesn't restore previous URL 
+-Fix Issue #461: Router: Click binding not stripping root path
+-Fix Issue #508: Composition on error override
+-Fix Issue #511: Always end composition, even on error
+-Fix Issue #509: Unable to set activator settings "closeOnDeactivate" property to false
+-Fix Issue #512: Multi-item activator issue
+-Fix Issue #356: Don't throw exception in deferred fail in canActivate
+-Fix Issue #417: Added support for null routes.
+-Fix Issue #500: Observable.js - Custom shouldIgnorePropertyName
+-Fix Issue #505: Make observable plug-in convert existing properties
+-Fix Issue #262: binding different views to the same view-model (enable default behavior of router)
+-Fix Issue #430: Sometimes, negative response from CanDeactivate doesn't restore previous URL
 -Fix Issue #520: Ensuring that composition show never inadvertently hides elements
 -Fix Issue #514: Don't enforce viewPlugin
 -Fix Issue #519: Optimize Part Replacement
@@ -74,7 +98,7 @@
 -Fix Issue #515: Cache Parsed Views
 -Fix Issue #479: Can't use template with vs2013 express
 -Fix Issue #523: viewEngine$createView does not deliver promise but deferred object when returning cached element
--Fix issue #530: add console.error call to logError 
+-Fix issue #530: add console.error call to logError
 -Fix Issue #531: Made dialog.isOpen computed
 -Fixed a bug with activation when modules were reused. Lifecycle wasn't fully enforced.
 -Added a string.trim polyfill
@@ -187,7 +211,7 @@ multiple ids are passed then the promise resolves with an array of modules. syst
 -More unit tests added.
 -Fixed some invalid html generation in the view engine.
 -Styled the widget demo.
--Fixed transitions so that they run even if there is no new child. 
+-Fixed transitions so that they run even if there is no new child.
 -Router now uses route.caption for document title.
 -Router navigateTo now accepts a second parameter of 'skip' to skip the route handler or 'replace' to replace the url.
 -Removed the app module's startup dependency on the message box module.
